Finished the form UI

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <h1>Library</h1>
             <div class="form">
                 <input type="text" name="book-name" id="book-name" autocomplete="off" placeholder="Title" required>
-                <h4>Please enter a title name</h4>
+                <h4 class="invalid"></h4>
                 <input type="text" name="book-author" id="book-author" autocomplete="off" placeholder="Author" required>
-                <h4>Please enter an author name</h4>
+                <h4 class="invalid"></h4>
                 <input type="number" name="book-pages" id="book-pages" autocomplete="off" placeholder="Number of pages" required>
-                <h4>Please enter a valid number of pages</h4>
+                <h4 class="invalid"></h4>
                 <div class="read-box">
                     <input type="checkbox" name="book-read" id="book-read">
                     <label for="book-read"> Have you read it?</label>
