Addded functionality to delete all button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h2>Books not read:</h2>
                     <h2>0</h2>
                 </div>
-                <button>Delete All</button>
+                <button class="delete-button">Delete All</button>
             </div>
             <div class="book-shelf" id="book-shelf"></div>
         </div>
