Added read counter functionality

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <div class="shelf-info">
                 <div>
                     <h2>Books read:</h2>
-                    <h2>0</h2>
+                    <h2 class="read-counter">0</h2>
                 </div>
                 <div>
                     <h2>Books not read:</h2>
-                    <h2>0</h2>
+                    <h2 class="not-read-counter">0</h2>
                 </div>
                 <button class="delete-button">Delete All</button>
             </div>
