Added style to book buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Librery</title>
+    <title>Library</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -47,7 +47,7 @@
                     <h2>Books not read:</h2>
                     <h2 class="not-read-counter">0</h2>
                 </div>
-                <button class="delete-button">Delete All</button>
+                <button id="delete-button">Delete All</button>
             </div>
             <div class="book-shelf" id="book-shelf"></div>
         </div>
